--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "easycorp/easyadmin-bundle": "^4.8",
         "knplabs/knp-paginator-bundle": "^6.2",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "phpmailer/phpmailer": "^6.8",
         "phpstan/phpdoc-parser": "^1.24",
         "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
