--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/mime": "6.3.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "6.3.*",
+        "symfony/polyfill-intl-icu": "^1.28",
         "symfony/process": "6.3.*",
         "symfony/property-access": "6.3.*",
         "symfony/property-info": "6.3.*",
