--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/orm": "^2.16",
         "easycorp/easyadmin-bundle": "^4.8",
         "knplabs/knp-paginator-bundle": "^6.2",
+        "monolog/monolog": "^3.5",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpmailer/phpmailer": "^6.8",
         "phpstan/phpdoc-parser": "^1.24",
