--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
         "watch": "encore dev --watch",
         "build": "encore production --progress"
     },
+    "engines": {
+        "node": "v18.14.1.*",
+        "npm": "9.3.1.*"
+    },
     "dependencies": {
         "@popperjs/core": "^2.11.8"
     }
