--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=
-APP_SECRET=
+APP_ENV='dev'
+APP_SECRET='76d8a9261933d4e59fc82b380261d6f9'
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
