--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,14 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-intl": "*",
         "doctrine/doctrine-bundle": "^2.11",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^2.16",
         "easycorp/easyadmin-bundle": "^4.8",
         "knplabs/knp-paginator-bundle": "^6.2",
         "monolog/monolog": "^3.5",
+        "paragonie/sodium_compat": "^1.20",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpmailer/phpmailer": "^6.8",
         "phpstan/phpdoc-parser": "^1.24",
