public access permissions

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,8 +40,12 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        # allow unauthenticated users to access the login form
+        - { path: ^/admin/login, roles: PUBLIC_ACCESS }
+        # but require authentication for all other admin routes
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/user, roles: ROLE_USER }
+
 
 when@test:
     security:
