--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dependencies": {
         "@formatjs/intl-locale": "^3.4.3",
         "@popperjs/core": "^2.11.8",
-        "intl-polyfill": "^0.0.3"
+        "config.json": "^0.0.4",
+        "intl-polyfill": "^0.0.3",
+        "sequelize": "^6.35.1"
     }
 }
