--- a/.env
+++ b/.env
@@ -15,7 +15,13 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=dev
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=parrot_garage
+DB_USERNAME=root
+DB_PASSWORD=
+
 APP_SECRET=
 ###< symfony/framework-bundle ###
 
