--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
     "devDependencies": {
-        "@babel/core": "^7.17.0",
-        "@babel/preset-env": "^7.16.0",
+        "@babel/cli": "^7.23.4",
+        "@babel/core": "^7.23.5",
+        "@babel/preset-env": "^7.23.5",
+        "@babel/preset-react": "^7.0.0",
+        "@hotwired/stimulus": "^3.0.0",
+        "@symfony/stimulus-bridge": "^3.2.0",
+        "@symfony/ux-react": "file:vendor/symfony/ux-react/assets",
         "@symfony/webpack-encore": "^4.0.0",
+        "babel-loader": "^9.1.3",
         "bootstrap": "^5.3.2",
         "core-js": "^3.23.0",
+        "css-loader": "^6.8.1",
         "file-loader": "^6.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "regenerator-runtime": "^0.13.9",
         "sass": "^1.69.5",
         "sass-loader": "^13.3.2",
-        "webpack": "^5.74.0",
+        "style-loader": "^3.3.3",
+        "webpack": "^5.89.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
     },
@@ -26,14 +36,22 @@
         "npm": "^9.3.1"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "@formatjs/intl-locale": "^3.4.3",
+        "@mui/material": "^5.14.18",
+        "@mui/styled-engine-sc": "^6.0.0-alpha.6",
         "@popperjs/core": "^2.11.8",
         "ajax": "^0.0.4",
         "ajax-client": "^3.0.3",
+        "babel-plugin-import": "^1.13.8",
         "config.json": "^0.0.4",
         "intl-polyfill": "^0.0.3",
         "jquery": "^3.7.1",
         "minimist": "^1.2.8",
-        "sequelize": "^6.35.1"
+        "react-top-loading-bar": "^2.3.1",
+        "sequelize": "^6.35.1",
+        "styled-components": "^6.1.1",
+        "styled-jsx": "^5.1.2"
     }
 }
