--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@babel/cli": "^7.23.4",
         "@babel/core": "^7.23.5",
+        "@babel/plugin-syntax-jsx": "^7.23.3",
         "@babel/preset-env": "^7.23.5",
         "@babel/preset-react": "^7.0.0",
         "@hotwired/stimulus": "^3.0.0",
@@ -44,6 +45,7 @@
         "@popperjs/core": "^2.11.8",
         "ajax": "^0.0.4",
         "ajax-client": "^3.0.3",
+        "axios": "^1.6.2",
         "babel-plugin-import": "^1.13.8",
         "config.json": "^0.0.4",
         "intl-polyfill": "^0.0.3",
