--- a/composer.json
+++ b/composer.json
@@ -8,51 +8,51 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-intl": "*",
-        "doctrine/dbal": "^3.7",
-        "doctrine/doctrine-bundle": "^2.11",
+        "doctrine/dbal": "^3.8.1",
+        "doctrine/doctrine-bundle": "^2.11.1",
         "doctrine/doctrine-migrations-bundle": "^3.3",
-        "doctrine/orm": "^2.16",
-        "easycorp/easyadmin-bundle": "^4.8",
-        "knplabs/knp-paginator-bundle": "^6.2",
+        "doctrine/orm": "^2.18",
+        "easycorp/easyadmin-bundle": "^4.8.13",
+        "knplabs/knp-paginator-bundle": "^6.3",
         "monolog/monolog": "^3.5",
         "paragonie/sodium_compat": "^1.20",
         "phpdocumentor/reflection-docblock": "^5.3",
-        "phpmailer/phpmailer": "^6.8",
-        "phpstan/phpdoc-parser": "^1.24",
-        "symfony/apache-pack": "^1.0",
-        "symfony/asset": "6.3.*",
-        "symfony/console": "6.3.*",
-        "symfony/doctrine-messenger": "6.3.*",
-        "symfony/dotenv": "6.3.*",
-        "symfony/expression-language": "6.3.*",
-        "symfony/flex": "^2",
-        "symfony/form": "6.3.*",
-        "symfony/framework-bundle": "6.3.*",
-        "symfony/http-client": "6.3.*",
-        "symfony/intl": "6.3.*",
-        "symfony/mailer": "6.3.*",
-        "symfony/mime": "6.3.*",
+        "phpmailer/phpmailer": "^6.9.1",
+        "phpstan/phpdoc-parser": "^1.25",
+        "symfony/apache-pack": "^1.0.1",
+        "symfony/asset": "6.3.12*",
+        "symfony/console": "6.3.12*",
+        "symfony/doctrine-messenger": "6.3.12*",
+        "symfony/dotenv": "6.3.12*",
+        "symfony/expression-language": "6.3.12*",
+        "symfony/flex": "^2.4.4",
+        "symfony/form": "6.3.12*",
+        "symfony/framework-bundle": "6.3.12*",
+        "symfony/http-client": "6.3.12*",
+        "symfony/intl": "6.3.12*",
+        "symfony/mailer": "6.3.12*",
+        "symfony/mime": "6.3.12*",
         "symfony/monolog-bundle": "^3.10",
-        "symfony/notifier": "6.3.*",
-        "symfony/polyfill-intl-icu": "^1.28",
-        "symfony/process": "6.3.*",
-        "symfony/property-access": "6.3.*",
-        "symfony/property-info": "6.3.*",
-        "symfony/requirements-checker": "^2.0",
-        "symfony/runtime": "6.3.*",
-        "symfony/security-bundle": "6.3.*",
-        "symfony/serializer": "6.3.*",
-        "symfony/string": "6.3.*",
-        "symfony/translation": "6.3.*",
-        "symfony/twig-bundle": "6.3.*",
-        "symfony/ux-react": "^2.13",
-        "symfony/validator": "6.3.*",
-        "symfony/web-link": "6.3.*",
-        "symfony/webpack-encore-bundle": "^2.1",
-        "symfony/yaml": "6.3.*",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0",
-        "vich/uploader-bundle": "^2.2"
+        "symfony/notifier": "6.3.12*",
+        "symfony/polyfill-intl-icu": "^1.29",
+        "symfony/process": "6.3.12*",
+        "symfony/property-access": "6.3.12*",
+        "symfony/property-info": "6.3.12*",
+        "symfony/requirements-checker": "^2.0.1",
+        "symfony/runtime": "6.3.12*",
+        "symfony/security-bundle": "6.3.12*",
+        "symfony/serializer": "6.3.12*",
+        "symfony/string": "6.3.12*",
+        "symfony/translation": "6.3.12*",
+        "symfony/twig-bundle": "6.3.12*",
+        "symfony/ux-react": "^2.14",
+        "symfony/validator": "6.3.12*",
+        "symfony/web-link": "6.3.12*",
+        "symfony/webpack-encore-bundle": "^2.1.1",
+        "symfony/yaml": "6.3.12*",
+        "twig/extra-bundle": "^2.12|^3.8",
+        "twig/twig": "^2.12|^3.8",
+        "vich/uploader-bundle": "^2.3"
     },
     "config": {
         "allow-plugins": {
@@ -111,13 +111,13 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "6.3.*",
-        "symfony/css-selector": "6.3.*",
-        "symfony/debug-bundle": "6.3.*",
-        "symfony/maker-bundle": "^1.0",
-        "symfony/phpunit-bridge": "^6.3",
-        "symfony/stopwatch": "6.3.*",
-        "symfony/web-profiler-bundle": "6.3.*"
+        "phpunit/phpunit": "^9.6.16",
+        "symfony/browser-kit": "6.3.12*",
+        "symfony/css-selector": "6.3.12*",
+        "symfony/debug-bundle": "6.3.12*",
+        "symfony/maker-bundle": "^1.53",
+        "symfony/phpunit-bridge": "^6.4.3",
+        "symfony/stopwatch": "6.3.12*",
+        "symfony/web-profiler-bundle": "6.3.12*"
     }
 }
