--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,7 @@
     },
     "scripts": {
         "auto-scripts": {
+            "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd",
             "requirements-checker": "script"
         },
