--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -41,10 +41,10 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         # allow unauthenticated users to access the login form
-        - { path: ^/admin/login, roles: PUBLIC_ACCESS, requires_channel: https }
+        - { path: ^/admin/login, roles: PUBLIC_ACCESS}
         # but require authentication for all other admin routes
-        - { path: ^/admin, roles: ROLE_ADMIN, requires_channel: https }
-        - { path: ^/user, roles: ROLE_USER, requires_channel: https }
+        - { path: ^/admin, roles: ROLE_ADMIN}
+        - { path: ^/user, roles: ROLE_USER}
 
 
 when@test:
