--- a/composer.json
+++ b/composer.json
@@ -20,36 +20,36 @@
         "phpmailer/phpmailer": "^6.9.1",
         "phpstan/phpdoc-parser": "^1.25",
         "symfony/apache-pack": "^1.0.1",
-        "symfony/asset": "6.3.12",
-        "symfony/console": "6.3.12",
-        "symfony/doctrine-messenger": "6.3.12",
-        "symfony/dotenv": "6.3.12",
-        "symfony/expression-language": "6.3.12",
+        "symfony/asset": "6.4.*",
+        "symfony/console": "6.4.*",
+        "symfony/doctrine-messenger": "6.4.*",
+        "symfony/dotenv": "6.4.*",
+        "symfony/expression-language": "6.4.*",
         "symfony/flex": "^2.4.4",
-        "symfony/form": "6.3.12",
-        "symfony/framework-bundle": "6.3.12",
-        "symfony/http-client": "6.3.12",
-        "symfony/intl": "6.3.12",
-        "symfony/mailer": "6.3.12",
-        "symfony/mime": "6.3.12",
+        "symfony/form": "6.4.*",
+        "symfony/framework-bundle": "6.4.*",
+        "symfony/http-client": "6.4.*",
+        "symfony/intl": "6.4.*",
+        "symfony/mailer": "6.4.*",
+        "symfony/mime": "6.4.*",
         "symfony/monolog-bundle": "^3.10",
-        "symfony/notifier": "6.3.12",
+        "symfony/notifier": "6.4.*",
         "symfony/polyfill-intl-icu": "^1.29",
-        "symfony/process": "6.3.12",
-        "symfony/property-access": "6.3.12",
-        "symfony/property-info": "6.3.12",
+        "symfony/process": "6.4.*",
+        "symfony/property-access": "6.4.*",
+        "symfony/property-info": "6.4.*",
         "symfony/requirements-checker": "^2.0.1",
-        "symfony/runtime": "6.3.12",
-        "symfony/security-bundle": "6.3.12",
-        "symfony/serializer": "6.3.12",
-        "symfony/string": "6.3.12",
-        "symfony/translation": "6.3.12",
-        "symfony/twig-bundle": "6.3.12",
+        "symfony/runtime": "6.4.*",
+        "symfony/security-bundle": "6.4.*",
+        "symfony/serializer": "6.4.*",
+        "symfony/string": "6.4.*",
+        "symfony/translation": "6.4.*",
+        "symfony/twig-bundle": "6.4.*",
         "symfony/ux-react": "^2.14",
-        "symfony/validator": "6.3.12",
-        "symfony/web-link": "6.3.12",
+        "symfony/validator": "6.4.*",
+        "symfony/web-link": "6.4.*",
         "symfony/webpack-encore-bundle": "^2.1.1",
-        "symfony/yaml": "6.3.12",
+        "symfony/yaml": "6.4.*",
         "twig/extra-bundle": "^2.12|^3.8",
         "twig/twig": "^2.12|^3.8",
         "vich/uploader-bundle": "^2.3"
@@ -107,17 +107,17 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.3.*"
+            "require": "6.4.*"
         }
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6.16",
-        "symfony/browser-kit": "6.3.12",
-        "symfony/css-selector": "6.3.12",
-        "symfony/debug-bundle": "6.3.12",
+        "symfony/browser-kit": "6.4.*",
+        "symfony/css-selector": "6.4.*",
+        "symfony/debug-bundle": "6.4.*",
         "symfony/maker-bundle": "^1.53",
         "symfony/phpunit-bridge": "^6.4.3",
-        "symfony/stopwatch": "6.3.12",
-        "symfony/web-profiler-bundle": "6.3.12"
+        "symfony/stopwatch": "6.4.*",
+        "symfony/web-profiler-bundle": "6.4.*"
     }
 }
