add data.sql + modif readme

--- a/.env
+++ b/.env
@@ -22,7 +22,7 @@ DB_DATABASE=parrot_garage
 DB_USERNAME=root
 DB_PASSWORD=
 
-APP_SECRET=
+APP_SECRET='76d8a9261933d4e59fc82b380261d6f9'
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
