composer up + security modif

--- a/.env
+++ b/.env
@@ -15,12 +15,12 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=parrot_garage
-DB_USERNAME=root
-DB_PASSWORD=
+#DB_CONNECTION=
+#DB_HOST=
+#DB_PORT=
+#DB_DATABASE=
+#DB_USERNAME=
+#DB_PASSWORD=
 
 APP_SECRET='76d8a9261933d4e59fc82b380261d6f9'
 ###< symfony/framework-bundle ###
